Try 2 to fix height problem on mobile browsers

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,7 +1,7 @@
 .container{
   background-color: var(--raisin-black);
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - calc(100vh - 100%));
   color:white;
   display:flex;
   flex-direction: column;
