--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,7 +3,6 @@
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
-  max-height: 100%;
   color: white;
 }
 
